--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DOIfront_page",
+  "name": "gulp-project",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,38 +7,24 @@
   },
   "author": "teleinfo",
   "license": "ISC",
-  "devDependencies": {
-    "gulp-eslint-if-fixed": "^1.0.0",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-jshint": "^2.0.4",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-uglify": "^3.0.0",
-    "jshint": "^2.9.5"
-  },
-  "description": "泰尔英福官网",
+  "devDependencies": {},
+  "description": "gulp 初始化工程",
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^8.0.2",
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
-    "eslint": "^4.11.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
     "gulp-clean": "^0.3.2",
     "gulp-cssnano": "^2.1.2",
+    "gulp-eslint": "^4.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-postcss": "^6.1.1",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.1.1",
     "gulp-sass": "^3.1.0",
-    "modify-filename": "^1.1.0",
+    "gulp-uglify": "^3.0.0",
     "scp2": "^0.5.0"
   }
 }
